--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@hotwired/turbo": "^7.2.5",
+        "@tailwindcss/forms": "^0.5.7",
         "autoprefixer": "^10.4.16",
         "axios": "^1.1.2",
-        "laravel-echo": "^1.15.0",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.31",
-        "pusher-js": "^8.0.1",
         "tailwindcss": "^3.3.5",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "gsap": "^3.12.2"
     }
 }
