--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "gsap": "^3.12.2"
+        "gsap": "^3.12.2",
+        "motion": "^10.16.4"
     }
 }
